source/style/content.css
/**

Global

*/

/* Use system fonts */
body {
	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !important;
}

/* Remove navbar logo */
.bird-topbar-etched {
	display: none !important;
}

/* Remove "Moments" tab */
#global-actions .moments {
	display: none !important;
}

/* Promote layers to fix repaints */
#permalink-overlay,
.RichEditor-tempTextArea {
	will-change: transform;
}

/* Contain layout for better performance */
.stream-item,
.Gallery,
.topbar {
	contain: layout style; /* We don't contain `content` as it breaks fullscreening videos */
}

/* Remove annoying suggestions in the Search popover */
#global-nav-search .typeahead-topics {
	display: none !important;
}
#global-nav-search .typeahead-topics + ul {
	border: 0 !important;
}

/* Highlight your mentions in the stream */
body:not(.NotificationsPage) .tweet.refined-twitter_mention:not(.permalink-tweet) {
	background-color: rgba(var(--refined-twitter_bgcolor-values), 0.1);
}

body:not(.NotificationsPage) .tweet.refined-twitter_mention:not(.permalink-tweet):hover {
	background-color: rgba(var(--refined-twitter_bgcolor-values), 0.2);
}

/**

Dashboard

*/

/* Remove the profile box */
.module.DashboardProfileCard {
	display: none !important;
}

/* Remove the "Trends for you" box */
.module.trends {
	display: none !important;
}

/* Remove the "Who to follow" box */
.module.wtf-module {
	display: none !important;
}

/* Remove the footer box */
.module.Footer {
	display: none !important;
}

/* Remove sidebars */
/* The `:not(.wrapper-list)` part filters out Twitter lists because we don't want to hide the sidebars there */
#page-container:not(.wrapper-list) .dashboard-left,
#page-container:not(.wrapper-list) .dashboard-right {
	display: none !important;
}

/* Center the tweet stream */
#page-container {
	width: unset !important;
}
#page-container .content-main {
	margin: 0 auto !important;
	float: unset !important;
}

/* Custom inline image element */
.AdaptiveMedia .refined-twitter_instagram-inline {
	max-width: 100%;
}

/* Hide list-add activity */
#stream-items-id .js-activity-list_member_added {
	display: none;
}

/* Hide follow activity */
#stream-items-id .js-activity-follow {
	display: none;
}

/* Center the nav widgets */
.global-nav .container {
	max-width: 880px !important;
}
@media screen and (max-width: 936px) {
	.global-nav .container {
		max-width: 590px !important;
	}
}

/* Adjust pushstate spinner for the above nav max-width change */
.pushstate-spinner {
	position: absolute;
	left: 0 !important;
	margin-left: -40px !important;
}
@media screen and (max-width: 936px) {
	.pushstate-spinner {
		left: 43% !important;
		margin-left: -10px !important;
	}
}

/* Style text in backticks */
code.refined-twitter_markdown {
	font-family: SFMono-Regular, Consolas, 'Liberation Mono', Menlo, Courier, monospace;
	background-color: rgba(27, 31, 35, 0.05);
	padding: 0.1em 0.4em;
	margin: 0;
	font-size: 90%;
}

/* Remove big header from profile page */
.ProfileCanopy-avatar {
	bottom: -160px !important;
}

.ProfileSidebar--withLeftAlignment {
	transform: translateY(130px);
	position: relative;
	z-index: 3;
}

.ProfileCanopy-navBar > .AppContainer {
	position: relative;
}

.ProfileCanopy,
.ProfileCanopy-header,
.ProfileCanopy--large {
	height: 0 !important;
}

/* Remove white border and add shadow to profile picture */
.ProfileCanopy-avatar {
	padding: 5px;
	border-radius: 100%;
}

.ProfileAvatar,
.ProfileAvatarEditing {
	border: none !important;
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.36);
}

/* Move dropdown menu to the right */
.DashUserDropdown {
	transform: translateX(145px);
}

.DashUserDropdown .dropdown-caret {
	transform: translateX(-145px);
}

/* Plugin-generated div that display the alternative text of an image */
.refined-twitter_image-alt {
	background-color: #fff;
	color: #14171a;
	padding: 0.8rem;
	font-size: 0.9rem;
	line-height: 1.5;
}
.refined-twitter_image-alt_top {
	border-bottom: 1px solid rgba(0,0,0,0.1);
}
.refined-twitter_image-alt_bottom {
	border-top: 1px solid rgba(0,0,0,0.1);
}
.refined-twitter_image-alt_img {
	top: 0 !important;
	margin-top: 0 !important;
	position: relative !important;
}
.refined-twitter_image-alt_container {
	position: relative !important;
}
.refined-twitter_image-alt_photocontainer {
	padding-top: 0 !important;
}
.refined-twitter_image-alt_ancestor-not-square {
	max-height: initial !important;
}

